--- a/sass/partials/_sections.scss
+++ b/sass/partials/_sections.scss
@@ -75,7 +75,7 @@
 }
 
 .title_lg {
-    font-size: 32px;
+    font-size: 30px;
     
     @include MQ(M) {
         font-size: 42px;
